--- a/styles/style.css
+++ b/styles/style.css
@@ -527,6 +527,7 @@ form button{
 #copy{
     color: #fff;
     font-size: 20px;
+    margin-left: 12%;
     text-align: center;
     font-weight: lighter;
     margin-top: 5%;
